# colex

./: .gitignore  .ignore  CNAME  ColEx.cabal  LICENSE_(code)  LICENSE_(text)  archive.html  atom.xml  callBower2nix.nix  callNode2nix.nix  callNpm2nix.nix  default.nix  hakyllColEx.nix  index.html  kernel.ipynb  menu.css  menu.js  nix-extras.json  nix-gitignore.json  node_modules  package-overrides.nix  post.html  purescript.nix  release.sh  root-dependencies.sh  scratch.nix  shell.nix  sidenote.css  sidenote.js  site.css  site.hs  sitemap.xml  stack.yaml  todo.org  tree.html  tree.js  watch.sh  webpackColEx.nix
ColEx/: ColEx.cabal  site.hs
client/: index.html  menu.html  post.html  site.css  tree.html
content/: .gitignore  .markdownlint.json  .stylelintrc.json  CNAME  default-options.org  default.nix  mathjax-node-cli-package-lock.json  mathjax-node-cli-package.json  package.json  robots.txt  webpack.config.js
css/: _arg-map.css  _arg-map.scss  bibliometric.css  bibliometric.scss  choose.css  cooperatives.css  cooperatives.scss  default.css  draw.css  futurism.css  futurism.scss  graph-contents.css  graph-contents.scss  quorum.css  quorum.scss
docs/: big-figs.org
git/: pre-commit
hakyll/: .gitignore  ColEx.cabal  HakyllExtension.hs  HakyllPandoc.hs  default.nix  site.hs  stack.yaml
hakyll/Hakyll/: Fancy.hs  Series.hs
infrastructure/: ColEx.cabal  site.hs
js/: .jshintrc  Automaton.js  arg-map.js  bibliometric-map.js  bibliometric-map.js.map  bibliometric.js  bibliometric.min.js  common.js  common.js.map  cooperatives.es  cooperatives.js  cooperatives.js.map  custom-elements.js  custom-elements.js.map  default.js  draw.js  draw.js.map  elm-runtime.js  futurism.es  futurism.js  futurism.js.map  graph-contents.es  graph-contents.js  graph-contents.js.map  jquery.flot.min.js  jstat.min.js  mcmc.js  plot.js  quorum-map.js  quorum-map.js.map  quorum.js  quorum.js.map  scratch.js  scratch.js.map  util-egal.js  vendors~custom-elements~quorum~util-egal.js  (+2 more)
(+744 files in other folders)
