name:               ColEx
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.6.*
                  , pandoc == 1.13.*
                  , containers == 0.5.5.*
                  , filepath == 1.3.0.*
                  , regex-compat == 0.95.*
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
