name:               ColEx
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            AGPL-3

executable site
  main-is:          site.hs
  other-modules:    HakyllExtension
  build-depends:    base
                  , binary
                  , containers
                  , directory
                  , filepath
                  , hakyll
                  , hashable
                  , pandoc
                  , pandoc-types
                  , process
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
