name:               ColEx
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            AGPL-3

executable site
  main-is:          site.hs
  other-modules:    Hakyll.Fancy
                    HakyllPandoc
  build-depends:    base
                  , binary
                  , containers
                  , directory
                  , filepath
                  , hakyll
                  , hashable
                  , pandoc >= 2.1.1
                  , pandoc-citeproc
                  , pandoc-types
                  , process
                  , split
                  , text
                  , time
                  , time-locale-compat
                  , transformers
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
  extra-libraries: z
